# McPike

./: CLAUDE.md  CMakeLists.txt
Source/: McPass.cpp  McPike.cpp
launchd/: com.boss.mcp.plist
